# ai-math-tutor

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
ai/: client.py  prompts.py  tutor.py
core/: config.py
models/: models.py
