[project]
name = "ai-math-tutor"
version = "1.0.0"
description = "An intelligent AI-Powered Math Tutor that delivers clear, step-by-step solutions to mathematical problems. Built with Streamlit for an intuitive and interactive interface, it integrates LangChain for seamless LLM workflows, leverages LangSmith for advanced observability and tracing, and ensures reliability with Pydantic’s type-safe data models."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Y. Siva Sai Krishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
keywords = [
    "ai", 
    "math", 
    "tutor", 
    "education", 
    "openai", 
    "streamlit",
    "langchain",
    "langsmith",
    "observability",
    "structured-output",
    "pydantic",
    "python",
    "open-source",
    "ysskrishna"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Environment :: Web Environment",
    "Framework :: Streamlit",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "langchain-openai>=0.3.30",
    "pydantic>=2.9.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
]

[project.urls]
Homepage = "https://github.com/ysskrishna/ai-math-tutor"
Repository = "https://github.com/ysskrishna/ai-math-tutor.git"
Documentation = "https://github.com/ysskrishna/ai-math-tutor#readme"
Issues = "https://github.com/ysskrishna/ai-math-tutor/issues"